--- a/sv-SE/dom/chrome/accessibility/AccessFu.properties
+++ b/sv-SE/dom/chrome/accessibility/AccessFu.properties
@@ -13,23 +13,23 @@ grip           =       grepp
 alert          =       avisering
 menupopup      =       meny
 document       =       dokument
-pane           =       fönster
-dialog         =       dialog
-separator      =       avgränsare
+pane           =       panel
+dialog         =       dialogruta
+separator      =       avskiljare
 toolbar        =       verktygsfält
 statusbar      =       statusfält
 table          =       tabell
-columnheader   =       kolumnrubrik
-rowheader      =       radrubrik
+columnheader   =       kolumnhuvud
+rowheader      =       radhuvud
 column         =       kolumn
 row            =       rad
 cell           =       cell
 link           =       länk
 list           =       lista
 listitem       =       listobjekt
-outline        =       disposition
-outlineitem    =       dispositionsobjekt
-pagetab        =       sidflik
+outline        =       kontur
+outlineitem    =       kontur objekt
+pagetab        =       flik
 propertypage   =       egenskapssida
 graphic        =       grafik
 pushbutton     =       knapp
@@ -43,28 +43,28 @@ diagram        =       diagram
 animation      =       animation
 equation       =       ekvation
 buttonmenu     =       knappmeny
-whitespace     =       tomt utrymme
-pagetablist    =       sidflikslista
-canvas         =       arbetsyta
-checkmenuitem  =       kryssruta som menyobjekt
+whitespace     =       mellanrum
+pagetablist    =       fliklista
+canvas         =       canvas
+checkmenuitem  =       menypost med kryssruta
 label          =       etikett
 passwordtext   =       lösenordstext
-radiomenuitem  =       alternativknapp som menyobjekt
-textcontainer  =       textbehållare
+radiomenuitem  =       alternativmenypost
+textcontainer  =       textutrymme
 togglebutton   =       växlingsknapp
-treetable      =       trädtabell
+treetable      =       träd tabell
 header         =       sidhuvud
 footer         =       sidfot
 paragraph      =       paragraf
 entry          =       post
-caption        =       bildtext
-heading        =       rubrik
+caption        =       rubrik
+heading        =       överskrift
 section        =       sektion
 form           =       formulär
-comboboxlist   =       kombinationsrutelista
-comboboxoption =       kombinationsrutealternativ
-imagemap       =       bild
-listboxoption  =       listrutealternativ
+comboboxlist   =       kombinationsrut lista
+comboboxoption =       kombinationsrut alternativ
+imagemap       =       bildkarta
+listboxoption  =       alternativ
 listbox        =       listruta
 flatequation   =       enkel ekvation
 gridcell       =       rutnätscell
@@ -85,19 +85,19 @@ textInputType_tel    =       telefon
 textInputType_url    =       URL
 
 # More sophisticated object descriptions
-headingLevel   =       rubriksnivå %S
+headingLevel   =       huvudnivå %S
 
 # more sophisticated list announcement
-listStart      =       Första objektet
-listEnd        =       Sista objektet
+listStart      =       Första post
+listEnd        =       Sista post
 # LOCALIZATION NOTE (listItemsCount): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-listItemsCount =       1 objekt;#1 objekt
+listItemsCount =       1 post;#1 poster
 
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
-objItemOfN      =       %1$S av %2$S
+objItemOfN      =       %1$S — %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -147,7 +147,7 @@ tabLoading     =      laddar
 tabLoaded      =      laddad
 tabNew         =      ny flik
 tabLoadStopped =      laddning avbruten
-tabReload      =      ladda om
+tabReload      =      hämta om
 
 # Object states
 stateChecked     =    markerad
@@ -157,6 +157,7 @@ statePressed     =    nedtryckt
 stateExpanded    =    utfälld
 stateCollapsed   =    infälld
 stateUnavailable =    otillgänglig
+stateReadonly    =    skrivskyddad
 stateRequired    =    begärd
 stateTraversed   =    besökt
 stateHasPopup    =    har popup
@@ -170,18 +171,18 @@ navigationMode =      navigerar
 quicknav_Simple      = Standard
 quicknav_Anchor      = Ankare
 quicknav_Button      = Knappar
-quicknav_Combobox    = Kombinationsrutor
-quicknav_Landmark    = Milstolpar
+quicknav_Combobox    = Kombinationsruta
+quicknav_Landmark    = Landmärken
 quicknav_Entry       = Poster
-quicknav_FormElement = Formulärfält
+quicknav_FormElement = Formulärelement
 quicknav_Graphic     = Bilder
-quicknav_Heading     = Rubriker
-quicknav_ListItem    = Listobjekt
+quicknav_Heading     = Huvuden
+quicknav_ListItem    = Listposter
 quicknav_Link        = Länkar
 quicknav_List        = Listor
 quicknav_PageTab     = Sidflikar
 quicknav_RadioButton = Alternativknappar
-quicknav_Separator   = Avgränsare
+quicknav_Separator   = Avskiljare
 quicknav_Table       = Tabeller
 quicknav_Checkbox    = Kryssrutor
 
@@ -189,29 +190,29 @@ quicknav_Checkbox    = Kryssrutor
 menubarAbbr        =       menyrad
 scrollbarAbbr      =       rullningslist
 gripAbbr           =       grepp
-alertAbbr          =       avisering
+alertAbbr          =       alarm
 menupopupAbbr      =       meny
 documentAbbr       =       dokument
-paneAbbr           =       fönster
-dialogAbbr         =       dialog
-separatorAbbr      =       avgränsare
+paneAbbr           =       panel
+dialogAbbr         =       dialogruta
+separatorAbbr      =       avskiljare
 toolbarAbbr        =       verktygsfält
-statusbarAbbr      =       statusfält
-tableAbbr          =       tab.
-columnheaderAbbr   =       kolumnrubrik
-rowheaderAbbr      =       radrubrik
+statusbarAbbr      =       statusrad
+tableAbbr          =       tbl
+columnheaderAbbr   =       kolumnhuvud
+rowheaderAbbr      =       radhuvud
 columnAbbr         =       kolumn
 rowAbbr            =       rad
 cellAbbr           =       cell
 linkAbbr           =       lnk
 listAbbr           =       lista
-listitemAbbr       =       listobjekt
+listitemAbbr       =       listpost
 outlineAbbr        =       disposition
 outlineitemAbbr    =       dispositionsobjekt
-pagetabAbbr        =       sidflik
+pagetabAbbr        =       flik
 propertypageAbbr   =       egenskapssida
 graphicAbbr        =       grafik
-pushbuttonAbbr     =       knp
+pushbuttonAbbr     =       btn
 checkbuttonAbbr    =       kryssruta
 radiobuttonAbbr    =       alternativknapp
 comboboxAbbr       =       kombinationsruta
@@ -222,28 +223,28 @@ diagramAbbr        =       diagram
 animationAbbr      =       animation
 equationAbbr       =       ekvation
 buttonmenuAbbr     =       knappmeny
-whitespaceAbbr     =       tomt utrymme
-pagetablistAbbr    =       sidflikslista
-canvasAbbr         =       arbetsyta
-checkmenuitemAbbr  =       kryssruta som menyobjekt
+whitespaceAbbr     =       mellanrum
+pagetablistAbbr    =       fliklista
+canvasAbbr         =       canvas
+checkmenuitemAbbr  =       menypost med kryssruta
 labelAbbr          =       etikett
-passwordtextAbbr   =       lösenordstxt
-radiomenuitemAbbr  =       alternativknapp som menyobjekt
-textcontainerAbbr  =       textbehållare
+passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       radiomenypost
+textcontainerAbbr  =       textutrymme
 togglebuttonAbbr   =       växlingsknapp
 treetableAbbr      =       trädtabell
-headerAbbr         =       sidhuvud
-footerAbbr         =       sidfot
+headerAbbr         =       huvud
+footerAbbr         =       fot
 paragraphAbbr      =       paragraf
 entryAbbr          =       post
-captionAbbr        =       bildtext
-headingAbbr        =       rubrik
+captionAbbr        =       rubrik
+headingAbbr        =       överskrift
 sectionAbbr        =       sektion
 formAbbr           =       formulär
 comboboxlistAbbr   =       kombinationsrutelista
 comboboxoptionAbbr =       kombinationsrutealternativ
-imagemapAbbr       =       bild
-listboxoptionAbbr  =       listrutealternativ
+imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       alternativ
 listboxAbbr        =       listruta
 flatequationAbbr   =       enkel ekvation
 gridcellAbbr       =       rutnätscell
@@ -252,7 +253,7 @@ figureAbbr         =       fig
 definitionlistAbbr =       definitionslista
 termAbbr           =       term
 definitionAbbr     =       definition
-textareaAbbr       =       txtomr
+textareaAbbr       =       txtarea
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
 # Number of columns within the table.
