--- a/sv-SE/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sv-SE/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,10 @@ openFile.title=Öppna fil
 # open fails.
 openFile.failed=Kunde inte läsa filen.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Misslyckades med att konvertera fil till Unicode från %1$S.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Rensa poster
@@ -77,6 +81,11 @@ browserContext.notification=Det här kladdblocket körs i webbläsarmiljön.
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Rad %1$S, Kol %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
