--- a/sv-SE/browser/chrome/browser/devtools/webide.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webide.properties
@@ -19,8 +19,12 @@ importPackagedApp_title=Välj katalog
 importHostedApp_title=Öppna app på webben
 importHostedApp_header=Ange Manifest URL
 
-notification_showTroubleShooting_label=felsökning
+notification_showTroubleShooting_label=Felsökning
 notification_showTroubleShooting_accesskey=t
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Hämtar…
 
 # These messages appear in a notification box when an error occur.
 
