--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -4,6 +4,15 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Gå med i konversation
+first_time_experience_button_label=Kom igång
+
 share_link_header_text=Dela denna länk för att bjuda in någon att tala:
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
@@ -52,12 +61,12 @@ problem_accessing_account=Det uppstod ett problem med att komma åt ditt konto
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Försök igen
 
-share_email_subject3=Du har blivit inbjuden till en konversation
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4={{clientShortname}} — Gå med i konversation
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=För att acceptera inbjudan, kopiera eller klicka på denna länk för att starta konversationen: \n\n{{callUrl}}
 share_button=E-post
 copy_url_button=Kopiera
+copy_url_button2=Kopiera länk
 copied_url_button=Kopierad!
 
 panel_footer_signin_or_signup_link=Logga in eller Registrera Dig\u0020
@@ -85,6 +94,10 @@ new_contact_button=Ny Kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Namn
 new_contact_email_placeholder=E-post
+new_contact_phone_placeholder=Firefox OS Telefon\u0020
+
+contacts_blocked_contacts=Blockerade Kontakter
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -174,6 +187,7 @@ initiate_call_button_label2=Redo att starta din konversation?
 incoming_call_title2=Konversations begäran
 incoming_call_accept_button=Acceptera
 incoming_call_accept_audio_only_tooltip=Acceptera med ljud
+incoming_call_accept_audio_video_tooltip=Acceptera med video
 incoming_call_cancel_button=Neka
 incoming_call_cancel_and_block_button=Neka och blockera
 incoming_call_block_button=Blockera
@@ -228,7 +242,6 @@ call_timeout_notification_text=Ditt samtal nådde inte fram.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Försök igen
-email_link_button=E-posta länk
 cancel_button=Avbryt
 
 cannot_start_call_session_not_ready=Kan inte påbörja samtal, en session är inte klar.
@@ -238,11 +251,15 @@ connection_error_see_console_notification=Samtal misslyckades; se konsolen för 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=Genom att använda {{clientShortname}} godkänner du {{terms_of_use}} och {{privacy_notice}}.
 legal_text_tos = Användarvillkor
 legal_text_privacy = Integritetsinfo
-client_shortname_fallback=denna produkt
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Hur var din konversation?
 feedback_what_makes_you_sad=Vad gör dig missnöjd?
@@ -267,3 +284,24 @@ feedback_rejoin_button=Gå åter in
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Rapportera användare
+
+help_label=Hjälp
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Konversation {{conversationLabel}}
+rooms_leave_button_label=Avbryt
+rooms_list_copy_url_tooltip=Kopiera länk
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_deleteConfirmation_label=Är du säker?
+rooms_new_room_button_label=Starta en konversation
+rooms_panel_title=Välj en konversation eller starta en ny
+rooms_room_full_label=Det är redan två person i denna konversation.
+rooms_room_full_call_to_action_nonFx_label=Ladda ner {{brandShortname}} för att starta din egen
+rooms_room_full_call_to_action_label=Lär dig mer om {{clientShortname}} »
+rooms_room_joined_label=Någon har gått med i konversationen!
+rooms_room_join_label=Gå med i konversation
