--- a/sv-SE/browser/chrome/browser/places/places.properties
+++ b/sv-SE/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=Filhämtningar
 OrganizerQueryAllBookmarks=Alla bokmärken
 OrganizerQueryTags=Etiketter
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Etikett
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Bokmärke
+switchtabResultLabel=Tabb
+keywordResultLabel=Nyckelord
+searchengineResultLabel=Sök
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
