--- a/sv-SE/dom/chrome/security/security.properties
+++ b/sv-SE/dom/chrome/security/security.properties
@@ -8,8 +8,10 @@ CrossSiteRequestBlocked=Cross-Origin-begäran blockerad: Same Origin-policyn til
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Webbplatsen angav en ogiltig Strict-Transport-Security-rubrik.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InsecurePasswordsPresentOnPage=Lösenordsfält på en osäker (http://) sida. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 InsecureFormActionPasswordsPresent=Lösenordsfält i ett formulär med en osäker (http://) formuläråtgärd. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 InsecurePasswordsPresentOnIframe=Lösenordsfält i en osäker (http://) iframe. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 LoadingMixedActiveContent=Öppnar blandat (osäkert) aktivt innehåll på en säker sida ”%1$S”
 LoadingMixedDisplayContent=Öppnar blandat (osäkert) visningsinnehåll på en säker sida ”%1$S”
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
