--- a/sv-SE/toolkit/chrome/global/charsetMenu.properties
+++ b/sv-SE/toolkit/chrome/global/charsetMenu.properties
@@ -64,15 +64,8 @@ ISO-8859-2.key   =       e
 ISO-8859-2       = Centraleuropeisk (ISO)
 
 # Chinese, Simplified
-# LOCALIZATION NOTE (gbk.bis.key):
-# gbk.bis.key never appears together with gbk.key and, hence, can be the same.
-gbk.bis.key      =          ö
+gbk.bis.key      =          S
 gbk.bis          = Kinesisk, förenklad
-# The strings gbk.key, gbk and gb18030 are no longer used but are retained
-# in order to enable backout after string freeze, just in case.
-gbk.key          =          ö
-gbk              = Kinesisk, förenklad (GBK)
-gb18030          = Kinesisk, förenklad (GB18030)
 
 # Chinese, Traditional
 Big5.key         =          d
