[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/browser.properties
+++ b/ta/browser/chrome/browser/browser.properties
@@ -101,13 +101,6 @@ popupShowPopupPrefix='%S'ஐ காட்டு
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
 
-# missing plugin installer
-installPlugin.message = இந்த பக்கத்தில் உள்ள ஊடகத்தை இயக்கத் தேவையான செருகுநிரலை நிறுவ விரும்புகிறீர்களா?
-installPlugin.button.label=%S ஐ நிறுவு
-installPlugin.button.accesskey=ந
-installPlugin.ignoreButton.label=மீண்டும் கேட்காதே
-installPlugin.ignoreButton.accesskey=க
-
 crashedpluginsMessage.title=இந்த %S கூடுதல் இணைப்பு சேதமடைந்தது.
 crashedpluginsMessage.reloadButton.label=பக்கத்தை மீளேற்று
 crashedpluginsMessage.reloadButton.accesskey=ம
@@ -547,13 +540,18 @@ getUserMedia.continueSharing.accesskey = த
 getUserMedia.stopSharing.label = பகிர்வை நிறுத்து
 getUserMedia.stopSharing.accesskey = ந
 
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -575,3 +573,9 @@ slowStartup.disableNotificationButton.accesskey = ம
 customizeTips.tip0 = %1$S: நீங்கள் விரும்பியவாறு செய்ய %2$S ஐ தனிபயனாக்கவும்.மேற்கண்டவற்றை சாதரணமாக இழுத்து பட்டி அல்லது கருவிபட்டையில் விடவும். %3$S பற்றிய தனிபயனாக்கம் %2$S.
 customizeTips.tip0.hint = குறிப்பு
 customizeTips.tip0.learnMore = மேலும் அறிய
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = %Sஐ மறுதுவக்கு
