--- a/ta/browser/chrome/browser/places/places.properties
+++ b/ta/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=பதிவிறக்கங்கள்
 OrganizerQueryAllBookmarks=அனைத்து புத்தகக்குறிகள்
 OrganizerQueryTags=ஒட்டுகள்
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=ஒட்டு
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=புத்தகக்குறி
+switchtabResultLabel=Tab
+keywordResultLabel=முக்கியச்சொல்
+searchengineResultLabel=தேடு
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
