--- a/ta/browser/chrome/browser/shellservice.properties
+++ b/ta/browser/chrome/browser/shellservice.properties
@@ -7,8 +7,13 @@ safeModeLabel=%S பாதுகாப்பு முறைமை (&S)
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = %S இல் முடிந்த வரைப் பெற அதை உங்களின் முன்னிருப்பு உலாவியாக அமைக்கவும்
+setDefaultBrowserConfirm.label     = %S உங்களின் முன்னிருப்பு உலாவியாக பயன்படுத்தவும்
+setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = விருப்பங்கள்
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = இப்போது வேண்டாம்
+setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = மீண்டும் கேட்காதே
 setDefaultBrowserNever.accesskey   = D
 
