--- a/ta/dom/chrome/security/security.properties
+++ b/ta/dom/chrome/security/security.properties
@@ -8,8 +8,10 @@ CrossSiteRequestBlocked=தோற்ற இடைமாற்ற கோர
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=பயண-பாகுகாப்பு-கண்டிப்பின் தலைப்பானது செல்லாதது என்பதை தளத்தில் குறிப்பிட்டுள்ளது.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InsecurePasswordsPresentOnPage=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) பக்கத்தில் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 InsecureFormActionPasswordsPresent=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) படிவ செயலைக் கொண்டுள்ள ஒரு படிவத்தில் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 InsecurePasswordsPresentOnIframe=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) iframe இல் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 LoadingMixedActiveContent=ஒரு பாதுகாப்பான பக்கத்தில் கலப்பான (பாதுகாப்பற்ற) செயலில் உள்ள உள்ளடக்கத்தை ஏற்றுகிறது "%1$S"
 LoadingMixedDisplayContent=ஒரு பாதுகாப்பான பக்கத்தில் கலப்பான (பாதுகாப்பற்ற) காட்சி உள்ளடக்கத்தை ஏற்றுகிறது "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
