--- a/ta/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ta/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,6 +97,19 @@ quit-button.tooltiptext.linux2 = வெளியேறு %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = வெளியேறு %1$S (%2$S)
 
+loop-call-button2.label = உரையாடுதலை துவக்கு
+loop-call-button2.tooltiptext = உரையாடுதலை துவக்கு
 
-loop-call-button.label = பேச இன்னொருவரை அழை
-loop-call-button.tooltiptext = பேச இன்னொருவரை அழை
+social-share-button.label = இப் பக்கத்தைப் பகிரவும்
+social-share-button.tooltiptext = இப் பக்கத்தைப் பகிரவும்
+
+panic-button.label = மற
+panic-button.tooltiptext = சில உலாவல் வரலாற்ற மற
+
+web-apps-button.label = பயன்பாடுகள்
+web-apps-button.tooltiptext = பயன்பாடுகளை கண்டுபிடி
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = WebIDE திற
