--- a/ta/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ta/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,9 @@ openFile.title=கோப்பினை திற
 # open fails.
 openFile.failed=கோப்பை வாசிப்பதில் தோல்வியடைந்தது.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=உருப்படிகளை அழி
@@ -77,6 +80,11 @@ browserContext.notification=ஸ்க்ரேட்ச்பேட் உலா
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = வரி %1$S, நிரல் %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
