--- a/ta/browser/chrome/browser/devtools/webide.properties
+++ b/ta/browser/chrome/browser/devtools/webide.properties
@@ -8,7 +8,10 @@ mainProcess_label=பிரதான செயலாக்கம்
 
 
 
-notification_showTroubleShooting_label=சிக்கல் தீர்த்தல்
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=ஏற்றுகிறது…
 
 # These messages appear in a notification box when an error occur.
 
