--- a/ta/browser/chrome/browser/quitDialog.properties
+++ b/ta/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=சேமித்து வெளியேறு (&S)
 neverAsk2=&அடுத்த முறை கேட்கக்கூடாது
 message=நீங்கள் %Sஆனது அடுத்த முறை துவக்கும் போது உங்கள் தத்தல்கள் மற்றும் சாளரங்களை சேமிக்க வேண்டுமா?
 messageNoWindows=அடுத்த முறை நீங்கள் துவக்கும் போது %S உங்கள் தத்தல்களை சேமிக்க வேண்டுமா?
+messagePrivate=நீஙகள் அந்தரங்க உலாவலில் உள்ளீர்கள். இப்போது %S இலிருந்து வெளியேறினால் திற்நத கீற்றுகளையும் சாளரங்களையும் துறக்க நேரிடும்.
