--- a/te/browser/chrome/browser/places/places.properties
+++ b/te/browser/chrome/browser/places/places.properties
@@ -75,16 +75,15 @@ OrganizerQueryDownloads=డౌన్‌లోడులు
 OrganizerQueryAllBookmarks=అన్ని ఇష్టాంశములు
 OrganizerQueryTags=టాగ్‌లు
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=టాగ్
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=ఇష్టాంశము
+switchtabResultLabel=Tab
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
