[sy] mobile: cycle 35

--- a/sr/mobile/android/chrome/browser.properties
+++ b/sr/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=Апликација
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Ослушкујем порт %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Активирај отклањање грешака за %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Притисните да бисте активирали удаљено отклањање грешака
 
 # Helper apps
 helperapps.open=Отвори
