--- a/nl/browser/chrome/browser/devtools/webide.properties
+++ b/nl/browser/chrome/browser/devtools/webide.properties
@@ -13,14 +13,18 @@ mainProcess_label=Hoofdproces
 local_runtime=Lokale runtime
 remote_runtime=Externe runtime
 remote_runtime_promptTitle=Externe runtime
-remote_runtime_promptMessage=hostnaam:port
+remote_runtime_promptMessage=hostnaam:poort
 
 importPackagedApp_title=Map selecteren
 importHostedApp_title=Gehoste app openen
 importHostedApp_header=Manifest-URL invoeren
 
-notification_showTroubleShooting_label=probleemoplossing
+notification_showTroubleShooting_label=Probleemoplossing
 notification_showTroubleShooting_accesskey=o
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Laden…
 
 # These messages appear in a notification box when an error occur.
 
