updated latvian translation

--- a/lv/browser/chrome/browser/loop/loop.properties
+++ b/lv/browser/chrome/browser/loop/loop.properties
@@ -14,17 +14,41 @@ unable_retrieve_url=Atvainojiet, bet zvana saite nav pieejama.
 
 # Conversation Window Strings
 
-incoming_call_title=Ienākošais zvans…
+
 incoming_call=Ienākošais zvans
 incoming_call_answer_button=Atbildēt
 incoming_call_decline_button=Noraidīt
 incoming_call_ignore_button=Ignorēt
 incoming_call_block_button=Bloķēt
-hangup_button_title=Nolikt klausuli
-mute_local_audio_button_title=Apklusināt audio
-unmute_local_audio_button_title=Pieslēgt audio
+cancel_button=Atcelt
+initiate_call_button_label2=Esat gatavs sākt sarunu?
+incoming_call_title2=Sarunas pieprasījums
+incoming_call_accept_button=Pieņemt
+incoming_call_accept_audio_only_tooltip=Pieņemt ar balsi
+incoming_call_cancel_button=Atcelt
+incoming_call_cancel_and_block_button=Atcelt un bloķēt
+hangup_button_title=Pārtraukt
+hangup_button_caption2=Iziet
+mute_local_audio_button_title=Apklusināt skaņu
+unmute_local_audio_button_title=Atjaunot skaņu
 mute_local_video_button_title=Apklusināt video
-unmute_local_video_button_title=Pieslēgt video
+unmute_local_video_button_title=Atjaunot video skaņu
+
+outgoing_call_title=Sākt sarunu?
+initiate_audio_video_call_button2=Sākt
+initiate_audio_video_call_tooltip2=Sākt video sarunu
+initiate_audio_call_button2=Balss saruna
+initiate_call_cancel_button=Atcelt
+
+new_contact_button=Jauns kontakts
+new_contact_name_placeholder=Vārds
+new_contact_email_placeholder=Epasts
+
+settings_menu_item_account=Konts
+settings_menu_item_settings=Iestatījumi
+settings_menu_item_signout=Iziet
+settings_menu_item_signin=Pierakstīties
+settings_menu_button_tooltip=Iestatījumi
 
 peer_ended_conversation=Jūsu partneris pārtrauca sarunu.
 
@@ -37,6 +61,17 @@ connection_error_see_console_notification=Zvans neizdevās; papildus informācij
 legal_text_and_links=Izmantojot šo produktu, Jūs piekrītat <a \
   target="_blank" href="{{terms_of_use_url}}">lietošanas nosacījumiem</a> un <a \
   href="{{privacy_notice_url}}">privātuma atrunai</a>.
+
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=Lietojot {{clientShortname}} jūs piekrītat {{terms_of_use}} \
+  un {{privacy_notice}}.
+legal_text_tos = lietošanas noteikumiem
+legal_text_privacy = privātuma politikai
+client_shortname_fallback=šo produktu
+
 
 add_contact_button=Pievienot kontaktu
 add_or_import_contact_title=Kontakta pievienošana vai importēšana
@@ -71,5 +106,46 @@ share_email_body4=Sveicināti!\r\n\r\nPievienojies man uz video sarunu izmantojo
 share_button=Epasts
 share_button2=Nosūtīt saiti
 copy_url_button=Kopēt
-copy_url_button2=Kopēt saiti
 copied_url_button=Nokopēts!
+display_name_guest=Viesis
+retry_call_button=Atkārtot
+email_link_button=Nosūtīt saiti
+
+
+
+edit_contact_menu_button=Rediģēt kontaktu…
+edit_contact_title=Kontakta rediģēšana
+edit_contact_name_label=Vārds
+edit_contact_email_label=Epasts
+edit_contact_done_button=Saglabāt
+
+feedback_call_experience_heading2=Lūdzu novērtējiet šo sarunu.
+feedback_what_makes_you_sad=Kas jums lika vilties?
+feedback_thank_you_heading=Paldies par jūsu vērtējumu!
+feedback_category_audio_quality=Audio kvalitāte
+feedback_category_video_quality=Video kvalitāte
+feedback_category_was_disconnected=Tika atvienots
+feedback_category_confusing=Mulsinošs
+feedback_category_other=Cits:
+feedback_custom_category_text_placeholder=Kas nebija labi?
+feedback_submit_button=Nosūtīt
+feedback_back_button=Atpakaļ
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Šis logs aizvērsies pēc {{countdown}} sekundēm;Šis logs aizvērsies pēc {{countdown}} sekundes;Šis logs aizvērsies pēc {{countdown}} sekundēm;
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Pievienoties vēlreiz
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Ziņot par lietotāju
+
+
+generic_failure_title=Kaut kas nogāja greizi.
+generic_failure_with_reason2=Jūs varat mēģināt vēlreiz vai arī nosūtīt saiti, lai ar jums sazinās vēlāk.
+generic_failure_no_reason2=Vai vēlaties mēģināt vēlreiz?
+
+
