Update strings for 35

--- a/zh-TW/browser/chrome/browser/devtools/webide.properties
+++ b/zh-TW/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=輸入安裝資訊檔網址
 notification_showTroubleShooting_label=疑難排解
 notification_showTroubleShooting_accesskey=t
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=載入中…
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=未完整連線，無法安裝專案。
