--- a/zh-TW/browser/chrome/browser/downloads/downloads.properties
+++ b/zh-TW/browser/chrome/browser/downloads/downloads.properties
@@ -38,13 +38,40 @@ stateBlockedPolicy=已依您的「安全性區域原則」封鎖
 # Indicates that the download was blocked after scanning.
 stateDirty=已封鎖: 可能包含病毒或間諜軟體。
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=這個檔案含有病毒或惡意程式。
+blockedPotentiallyUnwanted=這個檔案可能會傷害您的電腦。
+blockedUncommon=這可能是不安全的檔案。
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=您確定要解除封鎖此檔案？
+unblockTypeMalware=這個檔案含有病毒或是會傷害您的電腦的惡意程式。
+unblockTypePotentiallyUnwanted=這個檔案偽裝成正常的下載檔案，會對您的電腦與程式做出未預期的更改。
+unblockTypeUncommon=這是從未知來源下載的檔案，可能不安全。
+unblockTip=您可以搜尋不同的下載來源，或是稍後再下載一次。
+unblockButtonContinue=還是解除封鎖
+unblockButtonCancel=保護我的安全
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
 sizeUnknown=檔案大小未知
 
 # LOCALIZATION NOTE (shortTimeLeftSeconds, shortTimeLeftMinutes,
-# shortTimeLeftHours, shortTimeLeftDays):
+#                    shortTimeLeftHours, shortTimeLeftDays):
 # These values are displayed in the downloads indicator in the main browser
 # window, where space is available for three characters maximum.  %1$S is
 # replaced with the time left for the given measurement unit.  Even for days,
