--- a/zh-TW/browser/chrome/browser/places/places.properties
+++ b/zh-TW/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=下載項目
 OrganizerQueryAllBookmarks=所有書籤
 OrganizerQueryTags=標籤
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=標籤
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=書籤
+switchtabResultLabel=分頁標籤
+keywordResultLabel=關鍵字
+searchengineResultLabel=搜尋
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
