--- a/zh-TW/dom/chrome/accessibility/AccessFu.properties
+++ b/zh-TW/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    已點擊
 stateExpanded    =    已展開
 stateCollapsed   =    已摺疊
 stateUnavailable =    無法使用
+stateReadonly    =    唯讀
 stateRequired    =    必要的
 stateTraversed   =    開啟過
 stateHasPopup    =    已彈出
