--- a/zh-TW/dom/chrome/layout/css.properties
+++ b/zh-TW/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=預期應有 extends system 的指示符，卻出現「
 PECounterASWeight=additive-symbols descriptor 中的每個權重必須小於上一個權重。
 PEClassSelEOF=Class 名稱
 PEClassSelNotIdent=類別選擇器應該要有識別符卻出現了「%1$S」。
+PECoordinatePair=預期應有座標對，卻出現「%1$S」。
 PETypeSelEOF=Element 類型
 PETypeSelNotType=預期應要有元素名稱或「*」，卻出現「%1$S」。
 PEUnknownNamespacePrefix=未知的 namespace 前置詞「%1$S」。
