--- a/zh-TW/dom/chrome/layout/xbl.properties
+++ b/zh-TW/dom/chrome/layout/xbl.properties
@@ -10,7 +10,7 @@ TooDeepBindingRecursion=XBL 繫結「%S」已經用於太多的祖先元素 (Anc
 CircularExtendsBinding=將 XBL 繫結「%S」以「%S」延伸時會產生自我延伸錯誤
 # LOCALIZATION NOTE: do not localize <handler command="…">
 CommandNotInChrome=<handler command="…"> 不允許在 chrome 外使用。
-MalformedXBL = 發現一個不正確的 XBL 檔案。您是不是忘記了 bindings 標籤內的 XBL 命名空間？
+MalformedXBL = 發現一個不正常的 XBL 檔案。您是不是忘記了 bindings 標籤內的 XBL 命名空間？
 InvalidExtendsBinding=延伸「%S」無效。一般來說，請勿延伸標籤名稱。
 MissingIdAttr = 繫結標籤當中缺少了「id」屬性。
 
