--- a/zh-TW/mobile/android/chrome/browser.properties
+++ b/zh-TW/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=程式
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=正在監聽 %S 埠
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=啟用 %S 除錯
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=點擊開啟遠端除錯器
 
 # Helper apps
 helperapps.open=開啟
