--- a/zh-TW/netwerk/necko.properties
+++ b/zh-TW/netwerk/necko.properties
@@ -38,3 +38,5 @@ PhishingAuthAccept=我了解並會非常小心
 SuperfluousAuth=您正要以使用者「%2$S」的身分登入網站「%1$S」，但網站並不需要認證。可能有人想盜取您的帳號。\n\n「%1$S」真的是您要瀏覽的網站嗎？
 AutomaticAuth=您正要以使用者「%2$S」的身分登入網站「%1$S」。
 
+TrackingUriBlocked=因為啟用了追蹤保護，位於「%1$S」的資源已被封鎖。
+
