--- a/zh-TW/toolkit/chrome/global/resetProfile.properties
+++ b/zh-TW/toolkit/chrome/global/resetProfile.properties
@@ -7,7 +7,7 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=歡迎回來！看來您好一陣子沒有開啟 %S 了，您想要清理一下設定檔，讓您能有彷彿全新安裝一般的的體驗嗎？
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=重設 %S…
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=重新整理 %S…
+refreshProfile.resetButton.accesskey=e
 
