Update and add files to browser, mobile, security

--- a/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
+++ b/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
@@ -174,7 +174,7 @@ SEC_ERROR_CA_CERT_INVALID=簽發者的憑證無效。
 SEC_ERROR_PATH_LEN_CONSTRAINT_INVALID=憑證路徑長度限制無效。
 SEC_ERROR_CERT_USAGES_INVALID=憑證使用的欄位無效。
 SEC_INTERNAL_ONLY=**專供內部使用的模組**
-SEC_ERROR_INVALID_KEY=金要不支援所請求的操作。
+SEC_ERROR_INVALID_KEY=金鑰不支援所請求的操作。
 SEC_ERROR_UNKNOWN_CRITICAL_EXTENSION=憑證含未知的 Critical 擴充欄位。
 SEC_ERROR_OLD_CRL=新憑證廢止清冊不能比目前的清冊還晚。
 SEC_ERROR_NO_EMAIL_CERT=未加密或簽章: 您尚未擁有 Email 憑證。
