[S] dom: Bug 1074522 - Implement ellipse()/circle() parsing and style computing

--- a/it/dom/chrome/layout/css.properties
+++ b/it/dom/chrome/layout/css.properties
@@ -105,6 +105,9 @@ PEColorSaturationEOF = di una saturazione
 PEColorLightnessEOF = di una luminosità
 PEColorOpacityEOF = di una opacità nel valore colore
 PEExpectedNumber = Previsto un numero, invece è stato rilevato “%1$S”.
+PEPositionEOF = <position>
+PEExpectedPosition = Previsto <position>, invece è stato rilevato “%1$S”.
+PEExpectedRadius = Previsto un raggio, invece è stato rilevato “%1$S”.
 PEExpectedCloseParen = Previsto “)”, invece è stato rilevato “%1$S”.
 PEDeclEndEOF = “;” o “}” alla fine della dichiarazione
 PEParseDeclarationNoColon = Previsto “:”, invece è stato rilevato “%1$S”.
