updated latvian translation

--- a/lv/browser/chrome/browser/devtools/debugger.properties
+++ b/lv/browser/chrome/browser/devtools/debugger.properties
@@ -47,7 +47,7 @@ emptyVariablesText=Nav neviena mainīgā ko attēlot.
 scopeLabel=%S apgabals
 globalScopeLabel=Globāls
 
-watchExpressionsSeparatorLabel=\ →
+watchExpressionsSeparatorLabel=\u0020 →
 
 # LOCALIZATION NOTE (noSourcesText): The text to display in the sources menu
 # when there are no scripts.
