--- a/lv/browser/chrome/browser/loop/loop.properties
+++ b/lv/browser/chrome/browser/loop/loop.properties
@@ -12,13 +12,15 @@ display_name_available_status=Pieejams
 
 unable_retrieve_url=Atvainojiet, bet zvana saite nav pieejama.
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Ko vēlaties uzaicināt?
+invitee_expire_days_label=Ielūguma derīguma termiņš ir {{expiry_time}} dienas;Ielūguma derīguma termiņš ir {{expiry_time}} diena;Ielūguma derīguma termiņš ir {{expiry_time}} dienas;
+invitee_expire_hours_label=Ielūguma derīguma termiņš ir {{expiry_time}} stundas;Ielūguma derīguma termiņš ir {{expiry_time}} stunda;Ielūguma derīguma termiņš ir {{expiry_time}} stundas;
+
+
 # Conversation Window Strings
-
-
-incoming_call=Ienākošais zvans
-incoming_call_answer_button=Atbildēt
-incoming_call_decline_button=Noraidīt
-incoming_call_ignore_button=Ignorēt
 incoming_call_block_button=Bloķēt
 cancel_button=Atcelt
 initiate_call_button_label2=Esat gatavs sākt sarunu?
@@ -50,17 +52,26 @@ settings_menu_item_signout=Iziet
 settings_menu_item_signin=Pierakstīties
 settings_menu_button_tooltip=Iestatījumi
 
-peer_ended_conversation=Jūsu partneris pārtrauca sarunu.
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Pievienot vai importēt kontaktu
+import_contacts_button=Importēt
+importing_contacts_progress_button=Notiek importēšana…
+sync_contacts_button=Sinhronizēt kontaktus
+import_failed_description_simple=Diemžēl kontaktu importēšana nav izdevusies
+import_failed_description=Diemžēl kontaktu importēšana nav izdevusies. Palīdzība atrodama mūsu {{import_failed_support_link_label}}
+import_failed_support_link_label=atbalsta lapā
+peer_ended_conversation2=Cilvēks, kuram zvanāt pārtrauca sarunu.
+remove_contact_menu_button=Aizvākt kontaktu
+restart_call=Pievienoties atkārtoti
+retry_button=Mēģināt vēlreiz
 
 cannot_start_call_session_not_ready=Nevar sākt zvanu, sesija nav gatava.
 network_disconnected=Tīkla savienojums negaidīti aizvērās.
 
+panel_footer_signin_or_signup_link=Pieslēdzieties vai izveidojiet kontu
+
 connection_error_see_console_notification=Zvans neizdevās; papildus informācijas pieejama konsolē.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Izmantojot šo produktu, Jūs piekrītat <a \
-  target="_blank" href="{{terms_of_use_url}}">lietošanas nosacījumiem</a> un <a \
-  href="{{privacy_notice_url}}">privātuma atrunai</a>.
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
@@ -100,18 +111,18 @@ contact_offline_title=Šis cilvēks šobrīd nav pie interneta
 contacts_search_placesholder=Meklēt…
 conversation_has_ended=Jūsu saruna ir beigusies.
 
-share_email_subject4={{clientShortname}} — pievienojies sarunai
-share_email_body4=Sveicināti!\r\n\r\nPievienojies man uz video sarunu izmantojot {{clientShortname}}:\r\n\r\nTev neko nevajag lejupielādēt vai instalēt. Vienkārši iekopē šo adresi savā pārlūkā:\r\n\r\n{{callUrl}}\r\n\r\nJa gribi uzzināt vairāk par {{clientShortname}} skaties {{learnMoreUrl}}\r\n\r\nUz drīzu tikšanos!
-
+share_email_subject3=Jums ir uzaicinājums uz sarunu
+share_email_body3=Lai pieņemtu šo ielūgumu, uzklikšķiniet uz saites vai iekopējiet to pārlūka adreses laukā:\r\n\r\n{{callUrl}}
 share_button=Epasts
-share_button2=Nosūtīt saiti
 copy_url_button=Kopēt
 copied_url_button=Nokopēts!
 display_name_guest=Viesis
 retry_call_button=Atkārtot
 email_link_button=Nosūtīt saiti
 
-
+unblock_contact_menu_button=Atbloķēt kontaktu
+valid_email_text_description=Lūdzu ievadiet pareizu epasta adresi
+video_call_menu_button=Video saruna
 
 edit_contact_menu_button=Rediģēt kontaktu…
 edit_contact_title=Kontakta rediģēšana
