updated latvian translation

--- a/lv/dom/chrome/accessibility/AccessFu.properties
+++ b/lv/dom/chrome/accessibility/AccessFu.properties
@@ -13,6 +13,7 @@ grip           =       grip
 alert          =       alert
 menupopup      =       menu popup
 document       =       document
+stateReadonly    =    readonly
 pane           =       pane
 dialog         =       dialog
 separator      =       separator
