--- a/lv/dom/chrome/layout/css.properties
+++ b/lv/dom/chrome/layout/css.properties
@@ -25,6 +25,7 @@ PEGroupRuleEOF2=@media, @supports vai @-moz-document likuma beigas
 PEMozDocRuleBadFunc2=Tika gaidīts url(), url-prefix(), domain() vai regexp() @-moz-document likumā, bet atradās '%1$S'.
 PEMozDocRuleNotURI=Tika gaidīts URI @-moz-document likumā, bet atradās '%1$S'.
 PEAtNSPrefixEOF=vārdtelpas prefikss @namespace likumā
+PECoordinatePair=Tika gaidīts koordinātu pāris, bet atradās '%1$S'.
 PEAtNSURIEOF=vārdtelpas URI @namespace likumā
 PEAtNSUnexpected=Negaidīta virkne @namespace likumā: '%1$S'.
 PECounterExtendsNotIdent=Tika gaidīts sistēmu paplašinošs identifikators, bet atradās '%1$S'.
