[S] loop: Bug 1013989 - Change the name for the Loop button for Firefox Beta 34

--- a/it/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/it/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -49,7 +49,7 @@ email-link-button.label = Invia link
 email-link-button.tooltiptext3 = Invia link a questa pagina per email
 quit-button.tooltiptext.linux2 = Esci da %1$S (%2$S)
 quit-button.tooltiptext.mac = Esci da %1$S (%2$S)
-loop-call-button2.label = Avvia conversazione
+loop-call-button3.label = Hello
 loop-call-button2.tooltiptext = Avvia una conversazione
 social-share-button.label = Condividi pagina\u00AD
 social-share-button.tooltiptext = Condividi questa pagina
