--- a/cy/dom/chrome/accessibility/AccessFu.properties
+++ b/cy/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    pwyso
 stateExpanded    =    ehangwyd
 stateCollapsed   =    caewyd
 stateUnavailable =    ddim ar gael
+stateReadonly    =    darllen yn unig
 stateRequired    =    angenrheidiol
 stateTraversed   =    ymwelwyd
 stateHasPopup    =    llamlen
