--- a/cy/dom/chrome/layout/css.properties
+++ b/cy/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Disgwyl dynodydd ar gyfer system estyn ond canfod '%1$S
 PECounterASWeight=Rhaid i bob pwysau yn y disgrifiad symbol ychwanegu fod yn llai na'r pwysau blaenorol.
 PEClassSelEOF=enw dosbarth
 PEClassSelNotIdent=Disgwyl dynodydd dewisydd dosbarth ond canfod '%1$S'.
+PECoordinatePair=Disgwyl cyfesuryn par ond canfod '%1$S'.
 PETypeSelEOF=math o elfen
 PETypeSelNotType=Disgwyl enw elfen neu '*' ond canfod '%1$S'.
 PEUnknownNamespacePrefix=Rhagddodiad bwlch enw anhysbys '%1$S'.
