--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Dangos '%S'
 badContentBlocked.blocked.message=Mae %S yn rhwystro cynnwys ar y dudalen hon.
 badContentBlocked.notblocked.message=Nid yw %S yn rhwystro cynnwys ar y dudalen hon.
 
-# missing plugin installer
-installPlugin.message = Hoffech chi osod yr ategyn angenrheidiol i ddangos y cyfrwng ar y dudalen?
-installPlugin.button.label=Gosod %S
-installPlugin.button.accesskey=G
-installPlugin.ignoreButton.label=Peidiwch gofyn eto
-installPlugin.ignoreButton.accesskey=P
-
 crashedpluginsMessage.title=Mae'r ategyn %S wedi chwalu.
 crashedpluginsMessage.reloadButton.label=Ail lwytho tudalen
 crashedpluginsMessage.reloadButton.accesskey=A
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = A
 
 getUserMedia.sharingMenu.label = Tabiau dyfeisiau sy'n rhannu
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (camera a meicroffon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, meicroffon a rhaglen)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, meicroffon a sgrin)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, meicroffon a ffenestr)
+getUserMedia.sharingMenuCameraApplication = %S (camera a rhaglen)
+getUserMedia.sharingMenuCameraScreen = %S (camera a sgrin)
+getUserMedia.sharingMenuCameraWindow = %S (camera a ffenestr)
 getUserMedia.sharingMenuMicrophoneApplication = %S (meicroffon a rhaglen)
 getUserMedia.sharingMenuMicrophoneScreen = %S (meicroffon a sgrin)
 getUserMedia.sharingMenuMicrophoneWindow = %S (meicroffon a ffenestr)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = W
 customizeTips.tip0 = %1$S:Gallwch gyfaddasu %2$S i weithio eich ffordd chi. Llusgwch unrhyw un o'r uchod i'r ddewislen neu far offer. %3$S ar gyfaddasu %2$S.
 customizeTips.tip0.hint = Awgrym
 customizeTips.tip0.learnMore = Dysgu rhagor
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Ailgychwyn %S i osod diweddariadau
+appmenu.updateFailed.description = Methodd diweddaru yn y cefndir, llwythwch y diweddariad i lawr
+appmenu.restartBrowserButton.label = Ailgychwyn %S
+appmenu.downloadUpdateButton.label = Llwytho'r Diweddariad i Lawr
