--- a/cy/browser/chrome/browser/devtools/scratchpad.properties
+++ b/cy/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,10 @@ openFile.title=Agor Ffeil
 # open fails.
 openFile.failed=Methu darllen y ffeil.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Methwyd â throsi'r ffeil i Unicode o %1$S.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Clirio Eitemau
@@ -77,6 +81,11 @@ browserContext.notification=Mae'r scratchpad yn gweithredu yng nghyd-destun y Po
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Llinell %1$S, Colofn %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
