--- a/cy/browser/chrome/browser/devtools/webide.properties
+++ b/cy/browser/chrome/browser/devtools/webide.properties
@@ -19,8 +19,12 @@ importPackagedApp_title=Dewis Cyfeiriadur
 importHostedApp_title=Agor Ap Gwesteio
 importHostedApp_header=Rhoi URL Maniffest
 
-notification_showTroubleShooting_label=datrys anawsterau
+notification_showTroubleShooting_label=Datrys Anawsterau
 notification_showTroubleShooting_accesskey=t
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Llwytho…
 
 # These messages appear in a notification box when an error occur.
 
