--- a/cy/browser/chrome/browser/downloads/downloads.properties
+++ b/cy/browser/chrome/browser/downloads/downloads.properties
@@ -38,13 +38,40 @@ stateBlockedPolicy=Rhwystrwyd gan eich polisi ardal diogel
 # Indicates that the download was blocked after scanning.
 stateDirty=Rhwystrwyd: Gall fod y llwyth yn cynnwys firws neu yspiwar
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Mae'r ffeil ynn cynnwys firws neu ddrwgwar.
+blockedPotentiallyUnwanted=Gall y ffeil hon niweidio eich cyfrifiadur.
+blockedUncommon=Efallai nad yw'r ffeil yn ddiogel i'w hagor.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Ydych chi'n siŵr eich bod eisiau dad-rwystro'r ffeil hon?
+unblockTypeMalware=Mae'r ffeil yn cynnwys firws neu ddrwgwar arall fydd yn gwneud drwg i'ch cyfrifiadur.
+unblockTypePotentiallyUnwanted=Bydd y ffeil hon, sydd wedi ei ffugio fel cymorth i'w lwytho i lawr, yn gwneud newidiadau annisgwyl i'ch rhaglenni a'ch gosodiadau.
+unblockTypeUncommon=Mae'r ffeil hon wedi ei llwytho i lawr o wefan anghyfarwydd ac o bosib peryglus, efallai nad yw'n ddiogel ei hagor.
+unblockTip=Gallwch chwilio am ffynhonnell llwytho i lawr arall neu feisio llwytho'r ffeil i lawr rhywbryd eto.
+unblockButtonContinue=Dad-rwystro beth bynnag
+unblockButtonCancel=Cadw fi'n ddiogel
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
 sizeUnknown=Maint anhysbys
 
 # LOCALIZATION NOTE (shortTimeLeftSeconds, shortTimeLeftMinutes,
-# shortTimeLeftHours, shortTimeLeftDays):
+#                    shortTimeLeftHours, shortTimeLeftDays):
 # These values are displayed in the downloads indicator in the main browser
 # window, where space is available for three characters maximum.  %1$S is
 # replaced with the time left for the given measurement unit.  Even for days,
