--- a/cy/browser/chrome/browser/places/places.properties
+++ b/cy/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=Llwythi
 OrganizerQueryAllBookmarks=Pob Nod Tudalen
 OrganizerQueryTags=Tagiau
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Tag
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Nod Tudalen
+switchtabResultLabel=Tab
+keywordResultLabel=Allweddair
+searchengineResultLabel=Chwilio
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
