--- a/cy/toolkit/chrome/global/resetProfile.properties
+++ b/cy/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,4 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Mae'n edrych fel nad ydych wedi cychwyn %S ers tro. Hoffech chi ei lanhau ar gyfer profiad fel newydd? A gyda llaw, croeso nôl!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Ailosod %S…
-resetProfile.resetButton.accesskey=A
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
