--- a/es-MX/browser/chrome/browser/browser.properties
+++ b/es-MX/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Mostrar '%S'
 badContentBlocked.blocked.message=%S está bloqueando contenido en esta página.
 badContentBlocked.notblocked.message=%S no está bloqueando ningún contenido en esta página.
 
-# missing plugin installer
-installPlugin.message = ¿Quieres instalar el plugin necesario para mostrar los recursos multimedia en esta página?
-installPlugin.button.label=Instalar %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=No preguntarme de nuevo
-installPlugin.ignoreButton.accesskey=N
-
 crashedpluginsMessage.title=El plugin %S dejó de funcionar.
 crashedpluginsMessage.reloadButton.label=Recargar la página
 crashedpluginsMessage.reloadButton.accesskey=R
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = D
 
 getUserMedia.sharingMenu.label = Dispositivos compartiendo pestañas
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (cámara y micrófono)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (cámara, micrófono y aplicación)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (cámara, micrófono y pantalla)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (cámara, micrófono y ventana)
+getUserMedia.sharingMenuCameraApplication = %S (cámara y aplicación)
+getUserMedia.sharingMenuCameraScreen = %S (cámara y pantalla)
+getUserMedia.sharingMenuCameraWindow = %S (cámara y ventana)
 getUserMedia.sharingMenuMicrophoneApplication = %S (micrófono y aplicación)
 getUserMedia.sharingMenuMicrophoneScreen = %S (micrófono y pantalla)
 getUserMedia.sharingMenuMicrophoneWindow = %S (micrófono y ventana)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = a
 customizeTips.tip0 = %1$S: puedes personalizar %2$S para que funcione a tu manera. Simplemente arrastra cualquiera de los elementos de arriba al menú o a la barra de herramientas. %3$S sobre personalizar %2$S.
 customizeTips.tip0.hint = Sugerencia
 customizeTips.tip0.learnMore = Saber más
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Reiniciar %S para aplicar las actualizaciones
+appmenu.updateFailed.description = Actualización en segundo plano fallida, por favor, descarga la actualización
+appmenu.restartBrowserButton.label = Reiniciar %S
+appmenu.downloadUpdateButton.label = Descargar actualización
