--- a/es-MX/browser/chrome/browser/devtools/scratchpad.properties
+++ b/es-MX/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,10 @@ openFile.title=Abrir archivo
 # open fails.
 openFile.failed=Error al leer el archivo.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Falló al convertir un archivo a Unicode desde %1$S.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Limpiar ítems
@@ -77,6 +81,11 @@ browserContext.notification=Éste borrador se ejecuta en el contexto del navegad
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Línea %1$S, Columna %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
