--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -4,6 +4,12 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+
 share_link_header_text=Compartir este enlace para invitar a alguien a hablar:
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
@@ -52,10 +58,8 @@ problem_accessing_account=Hubo un problema accesando a tu cuenta
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Reintentar
 
-share_email_subject3=Haz sido invitado a una conversación
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Para aceptar esta invitación, sólo copia o haz clic en este enlace para iniciar tu conversación: \n\n{{callUrl}}
 share_button=Correo electrónico
 copy_url_button=Copiar
 copied_url_button=¡Se copío!
@@ -85,6 +89,8 @@ new_contact_button=Nuevo contacto
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nombre
 new_contact_email_placeholder=Correo electrónico
+
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -228,7 +234,6 @@ call_timeout_notification_text=Tu llamada no obtuvo respuesta.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Internar de nuevo
-email_link_button=Enviar enlace
 cancel_button=Cancelar
 
 cannot_start_call_session_not_ready=No se puede iniciar la llamada, la sesión no está lista.
@@ -238,11 +243,15 @@ connection_error_see_console_notification=La llamada falló; ve la consola para 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=Al usar {{clientShortname}} aceptas los {{terms_of_use}} y la {{privacy_notice}}.
 legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
-client_shortname_fallback=este producto
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=¿Qué te pareció la conversación?
 feedback_what_makes_you_sad=¿Qué cosas te ponen triste?
@@ -267,3 +276,15 @@ feedback_rejoin_button=Volver a unirse
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Reportar usuario
+
+help_label=Ayuda
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_leave_button_label=Salir
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_deleteConfirmation_label=¿Estás seguro?
